# pitch_backend

./: .gitignore  .gitmodules  CMakeLists.txt
pitch_backend/: CMakeLists.txt  WinMain.cpp
pitch_backend/game/: card.cpp  card.h
pitch_backend/networking/: CMakeLists.txt  packet.h  socket.cpp  socket.h
